# 2026GKD_Software_Test

First_test/: CMakeLists.txt  TaskDelay.cpp  TaskFilter.cpp  TaskGain.cpp  TaskManager.cpp  head.h  main.cpp
firstTest/: SensorTaskBase.cpp  TaskDelay.cpp  TaskFilter.cpp  TaskGain.cpp  TaskManager.cpp  head.h
